deploy/opa/constraint-templates/require-resource-limits.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: arcanarequireresourcelimits
spec:
  crd:
    spec:
      names:
        kind: ArcanaRequireResourceLimits
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package arcanarequireresourcelimits
        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          not container.resources.limits.memory
          msg := sprintf("Container %v has no memory limit", [container.name])
        }
        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          not container.resources.limits.cpu
          msg := sprintf("Container %v has no CPU limit", [container.name])
        }
