deploy/opa/constraint-templates/require-security-context.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: arcanarequiresecuritycontext
spec:
  crd:
    spec:
      names:
        kind: ArcanaRequireSecurityContext
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package arcanarequiresecuritycontext
        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          not container.securityContext.runAsNonRoot
          msg := sprintf("Container %v must set runAsNonRoot: true", [container.name])
        }
        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          not container.securityContext.allowPrivilegeEscalation == false
          msg := sprintf("Container %v must set allowPrivilegeEscalation: false", [container.name])
        }
